<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>vsomeip</name>
    <version>3.1.20</version>
    <maintainer email="Yooouxin@outlook.com">youxinxin</maintainer>
    <license>Mozilla Public License, v. 2.0</license>
    <description>Vsomeip</description>

    <buildtool_depend>cmake</buildtool_depend>
    <build_depend>boost</build_depend>

    <doc_depend>doxygen</doc_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
